# FN5

./: .gitignore  .python-version  LICENSE  Makefile  PYTHON_README.md  README.md  add-sample.sh  add-to-db.py  add_lock.py  batch-process.py  build.sh  build_python.sh  build_tests.sh  compose.env  docker-compose.yml  fast-snp.cpp  meson.build  pipeline-script.sh  pyproject.toml  query.cpp  query.py  release-lock.py  requirements.txt  run.py  setup.py  test-batching.sh  test.http  test.py  unit_test.sh  wait-for-lock.py
.github/: test.yaml
.github/workflows/: build.yaml  release.yaml  test.yaml
api/: .example.db  api.py  model.py
db/: add-to-db.py  add_lock.py  batch-process.py  model.py  query.py  release-lock.py  wait-for-lock.py
environments/: Dockerfile
src/: CMakeLists.txt  argparse.cpp  comparisons.cpp  fast-snp.cpp  fn5.cpp  fn5_python.cpp  sample.cpp
src/include/: argparse.hpp  comparisons.hpp  sample.hpp
src/python/: CMakeLists.txt
test/: CMakeLists.txt  all.txt  test.sh  test_argparse.cpp  test_comparisons.cpp  test_outputs.py  test_py_bindings.py  test_runner.cpp  test_sample.cpp  two_samples.txt
test/cases/: 1.fasta  2.fasta  3.fasta  4.fasta
test/cases/dummy/: 1.fasta  2.fasta  3.fasta  4.fasta  5.fasta  reference.fasta
