[build-system]
build-backend = 'mesonpy'
requires = ['meson', 'meson-python', 'pybind11']

[project]
name = 'fn5'
version = '2.0.7'
description = 'Fast, scalable SNP distance calculation from disk.'
readme = 'PYTHON_README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
  {name = 'Jeremy Westhead', email = 'jeremy.westhead@ndm.ox.ac.uk'},
]